<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="contact_launcher">Contacts - 605.486</string>
    <string name="display_screen">Display Contact</string>
    <string name="edit_screen">Edit Contact</string>
    
    <string name="display_name_label">Display Name</string>
    <string name="first_name_label">First</string>
    <string name="last_name_label">Last Name</string>
    <string name="birthdate_label">Birthday</string>
    <string name="preferred_contact_time_label">Best time to Call</string>
    <string name="home_phone_label">Home</string>
    <string name="work_phone_label">Work</string>
    <string name="mobile_phone_label">Mobile</string>
    <string name="email_label">Email</string>
    <string name="address_label">Address</string>
    
    <string name="edit_button">Edit Contact</string>
    <string name="back_to_list_button">Return to List</string>
    
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_contact_button">Create Contact</string>
    
</resources>
