<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:layout_gravity="bottom">
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
    <ScrollView
      android:layout_height="wrap_content"
      android:layout_width="match_parent">
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:stretchColumns="*"
          android:background="#234C59">
          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/display_name_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/display_name_value" />
          </TableRow>
          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/first_name_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/first_name_value" />
          </TableRow>
          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/last_name_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/last_name_value" />
          </TableRow>


          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/birthdate_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/birthdate_value" />
          </TableRow>
          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/preferred_contact_time_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/preferred_contact_time_value" />
          </TableRow>

          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/home_phone_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/home_phone_value" />
          </TableRow>
          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/work_phone_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/work_phone_value" />
          </TableRow>
          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/mobile_phone_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/mobile_phone_value" />
          </TableRow>

          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/email_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/email_value" />
          </TableRow>

          <TableRow
            android:layout_margin="10dp"
            android:background="#F5F8C4"
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
              style="@style/ContactLabel"
              android:text="@string/address_label" />
            <TextView
              style="@style/ContactDisplayText"
              android:id="@+id/address_value" />
          </TableRow>
        </TableLayout>
      </LinearLayout>
    </ScrollView>

  </LinearLayout>
  <LinearLayout
    android:paddingTop="6dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#123B48">
    <Button
      android:text="@string/edit_button"
      android:id="@+id/edit_button"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"></Button>
    <Button
      android:text="@string/back_to_list_button"
      android:id="@+id/back_to_list_button"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"></Button>
  </LinearLayout>
</LinearLayout>